--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,12 +29,31 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/mini_player_height">
         <ImageButton
-            android:layout_margin="10dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="parent"
+            android:id="@+id/btn_previous"
+            android:background="?android:selectableItemBackground"
+            android:src="@drawable/ic_skip_previous"
             app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/btn_play_or_pause"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
+        <ImageButton
+            android:id="@+id/btn_play_or_pause"
+            app:layout_constraintLeft_toRightOf="@id/btn_previous"
             android:background="?android:selectableItemBackground"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/ic_play_arrow"
+            android:layout_width="50dp"
+            android:layout_height="50dp"/>
+        <ImageButton
+            android:id="@+id/btn_next"
+            app:layout_constraintLeft_toRightOf="@id/btn_play_or_pause"
+            android:background="?android:selectableItemBackground"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:src="@drawable/ic_skip_next"
             android:layout_width="50dp"
             android:layout_height="50dp"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
