--- a/app/src/main/res/layout/mini_controller_notifi.xml
+++ b/app/src/main/res/layout/mini_controller_notifi.xml
@@ -5,12 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <TextView
+        android:visibility="gone"
         android:id="@+id/tv_title"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         style="@style/TextAppearance.Compat.Notification.Title"
         android:text="@string/app_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+    <TextView
+        android:text="Muzic name"
+        android:id="@+id/tv_name"
+        android:layout_below="@id/tv_title"
+        style="@style/TextAppearance.Compat.Notification.Title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
