--- a/app/src/main/res/layout/mini_controller_notifi.xml
+++ b/app/src/main/res/layout/mini_controller_notifi.xml
@@ -3,34 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
     <TextView
-        android:visibility="gone"
         android:id="@+id/tv_title"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
         style="@style/TextAppearance.Compat.Notification.Title"
-        android:text="@string/app_name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
+        android:visibility="gone" />
 
     <TextView
-        android:text="Muzic name"
         android:id="@+id/tv_name"
-        android:layout_below="@id/tv_title"
         style="@style/TextAppearance.Compat.Notification.Title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tv_title"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignTop="@id/controller"
+        android:layout_toStartOf="@+id/controller"
+        android:text="Muzic name" />
 
 
     <LinearLayout
-        android:layout_alignBottom="@id/tv_title"
+        android:id="@+id/controller"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
         android:layout_marginVertical="10dp"
-        android:layout_alignParentBottom="true"
         android:orientation="horizontal"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <ImageButton
             android:layout_marginHorizontal="15dp"
