--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="item_music_height">100dp</dimen>
     <dimen name="thumnail_item_music_size">80dp</dimen>
     <dimen name="mini_player_height">50dp</dimen>
+    <dimen name="size_large_button_controller">70dp</dimen>
+    <dimen name="width_music_progress_bar">300dp</dimen>
 </resources>
