add observer music progress

--- a/app/src/main/res/layout/fragment_now_playlist.xml
+++ b/app/src/main/res/layout/fragment_now_playlist.xml
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content" />
 
     <androidx.appcompat.widget.AppCompatSeekBar
+        android:max="100"
         app:layout_constraintBottom_toTopOf="@id/controller"
         android:id="@+id/music_progress"
         app:layout_constraintLeft_toLeftOf="parent"
