--- a/app/src/main/res/layout/fragment_music.xml
+++ b/app/src/main/res/layout/fragment_music.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.homeviewpager.MusicFragment">
+    tools:context=".fragments.homeviewpager.AllMusicFragment">
 
     <!-- TODO: Update blank fragment layout -->
 
