--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,17 +2,27 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_height="match_parent"
     tools:context=".fragments.HomeFragment">
 
     <com.google.android.material.tabs.TabLayout
-        android:elevation="4dp"
-        app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/tab_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/black"
+        android:elevation="4dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tabGravity="start"
+        app:tabIndicatorGravity="bottom"
+        app:tabIndicatorHeight="0dp"
+        app:tabInlineLabel="true"
+        app:tabMode="auto"
+        app:tabSelectedTextColor="@android:color/white"
+        app:tabTextAppearance="@style/TextAppearance.AppCompat.Large"
+        app:tabTextColor="@color/gray" />
 
     <androidx.viewpager.widget.ViewPager
         android:elevation="0dp"
@@ -22,41 +32,48 @@
         android:layout_height="0dp" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:elevation="4dp"
-        android:clipToPadding="false"
-        android:background="#2196F3"
+        android:background="@color/gray2"
         android:id="@+id/controller"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="@dimen/mini_player_height">
-        <ImageButton
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintTop_toBottomOf="parent"
-            android:id="@+id/btn_previous"
-            android:background="?android:selectableItemBackground"
-            android:src="@drawable/ic_skip_previous"
+
+        <ImageView
             app:layout_constraintLeft_toLeftOf="parent"
+            android:id="@+id/controller_thumnail"
+            android:layout_width="@dimen/mini_player_height"
+            android:layout_height="match_parent" />
+
+        <TextView
+            android:id="@+id/music_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:ellipsize="marquee"
+            android:focusable="true"
             app:layout_constraintRight_toLeftOf="@id/btn_play_or_pause"
-            android:layout_width="50dp"
-            android:layout_height="50dp" />
+            android:focusableInTouchMode="true"
+            android:gravity="center"
+            android:marqueeRepeatLimit="marquee_forever"
+            android:scrollHorizontally="true"
+            android:singleLine="true"
+            android:textColor="@android:color/white"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/controller_thumnail"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
         <ImageButton
+            android:layout_width="@dimen/mini_player_height"
             android:id="@+id/btn_play_or_pause"
-            app:layout_constraintLeft_toRightOf="@id/btn_previous"
+            android:layout_height="match_parent"
             android:background="?android:selectableItemBackground"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
             android:src="@drawable/ic_play_arrow"
-            android:layout_width="50dp"
-            android:layout_height="50dp"/>
-        <ImageButton
-            android:id="@+id/btn_next"
-            app:layout_constraintLeft_toRightOf="@id/btn_play_or_pause"
-            android:background="?android:selectableItemBackground"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:src="@drawable/ic_skip_next"
-            android:layout_width="50dp"
-            android:layout_height="50dp"/>
+            android:layout_marginRight="10dp"
+            android:scaleType="centerInside"
+            android:tint="@android:color/white"
+            app:layout_constraintRight_toRightOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
