--- a/app/src/main/res/layout/item_music_layout.xml
+++ b/app/src/main/res/layout/item_music_layout.xml
@@ -1,30 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:background="?android:selectableItemBackground"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/item_music_height">
+    android:layout_height="@dimen/item_music_height"
+    android:paddingBottom="10dp">
 
-    <ImageView
-        android:id="@+id/item_music_thumnail"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_width="@dimen/thumnail_item_music_size"
-        android:layout_height="@dimen/thumnail_item_music_size" />
+    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="?android:selectableItemBackground"
+        android:backgroundTint="#282828"
+        android:elevation="10dp"
+        app:cardCornerRadius="10dp">
 
-    <TextView
-        app:layout_constraintTop_toTopOf="@id/item_music_thumnail"
-        app:layout_constraintLeft_toRightOf="@id/item_music_thumnail"
-        android:id="@+id/music_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <TextView
-        android:id="@+id/author_name"
-        app:layout_constraintLeft_toLeftOf="@id/music_name"
-        app:layout_constraintTop_toBottomOf="@id/music_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
+            <ImageView
+                android:id="@+id/item_music_thumnail"
+                android:layout_width="@dimen/item_music_height"
+                android:layout_height="@dimen/item_music_height"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/music_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:textColor="@android:color/white"
+                app:layout_constraintBottom_toTopOf="@id/author_name"
+                app:layout_constraintLeft_toRightOf="@id/item_music_thumnail"
+                app:layout_constraintTop_toTopOf="@id/item_music_thumnail" />
+
+            <TextView
+                android:id="@+id/author_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/gray"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="@id/music_name"
+                app:layout_constraintTop_toBottomOf="@id/music_name" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
