--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="gray_opacity">#54000000</color>
+    <color name="black">#121212</color>
+    <color name="gray">#ababab</color>
+    <color name="gray2">#222327</color>
 </resources>
