--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -26,6 +26,7 @@
 
     <androidx.viewpager.widget.ViewPager
         android:elevation="0dp"
+        android:background="@color/black"
         app:layout_constraintTop_toBottomOf="@id/tab_bar"
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
