--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -29,6 +29,7 @@
         android:background="@color/black"
         app:layout_constraintTop_toBottomOf="@id/tab_bar"
         android:id="@+id/viewpager"
+        app:layout_constraintBottom_toTopOf="@id/controller"
         android:layout_width="match_parent"
         android:layout_height="0dp" />
 
