--- a/app/src/main/res/layout/fragment_now_playlist.xml
+++ b/app/src/main/res/layout/fragment_now_playlist.xml
@@ -7,34 +7,36 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.NowPlaylistFragment">
 
-    <ImageButton
-        android:id="@+id/btn_back"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_margin="10dp"
-        android:background="?android:selectableItemBackground"
-        android:scaleType="centerInside"
-        android:src="@drawable/ic_keyboard_arrow_down_black_30dp"
-        android:tint="@android:color/white"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_height="0dp"
         android:layout_width="match_parent"
-        app:layout_constraintBottom_toTopOf="@id/music_progress">
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/music_progress"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/thumbnail"
+        <ImageButton
+            android:id="@+id/btn_back"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_margin="10dp"
+            android:background="?android:selectableItemBackground"
+            android:scaleType="centerInside"
+            android:src="@drawable/ic_keyboard_arrow_down_black_30dp"
+            android:tint="@android:color/white"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/pager"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
-            android:layout_marginRight="50dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="0dp"
+            android:clipToPadding="false"
+            android:overScrollMode="never"
+            android:paddingHorizontal="30dp"
+            app:layout_constraintBottom_toTopOf="@id/music_name"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/btn_back" />
 
         <TextView
             android:id="@+id/music_name"
@@ -44,11 +46,11 @@
             android:layout_marginRight="20dp"
             android:gravity="center"
             android:textColor="@android:color/white"
-            android:textSize="15sp"
+            android:textSize="17sp"
             app:layout_constraintBottom_toTopOf="@id/author_name"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/thumbnail" />
+            app:layout_constraintTop_toBottomOf="@id/pager" />
 
         <TextView
             android:id="@+id/author_name"
@@ -58,9 +60,10 @@
             android:layout_marginRight="10dp"
             android:gravity="center"
             android:textColor="@android:color/white"
-            android:textSize="12sp"
+            android:textSize="15sp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/music_name" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
