--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,6 +34,7 @@
         android:layout_height="0dp" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:transitionName="shared_element_container"
         android:background="@color/gray2"
         android:id="@+id/controller"
         app:layout_constraintBottom_toBottomOf="parent"
