--- a/app/src/main/res/layout/fragment_now_playlist.xml
+++ b/app/src/main/res/layout/fragment_now_playlist.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
+    android:transitionName="shared_element_container"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.NowPlaylistFragment">
 
