add status playing music for list view

--- a/app/src/main/res/layout/item_music_layout.xml
+++ b/app/src/main/res/layout/item_music_layout.xml
@@ -26,6 +26,20 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
+            <com.mikhaellopez.circularprogressbar.CircularProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@color/gray_opacity"
+                app:cpb_progress="10"
+                app:cpb_progress_max="100"
+                app:cpb_progressbar_color="@android:color/holo_green_dark"
+                app:cpb_progressbar_width="5dp"
+                app:layout_constraintBottom_toBottomOf="@id/item_music_thumnail"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="@id/item_music_thumnail"
+                app:layout_constraintTop_toTopOf="@id/item_music_thumnail" />
+
             <TextView
                 android:id="@+id/music_name"
                 android:layout_width="wrap_content"
