--- a/app/src/main/res/layout/item_music_layout.xml
+++ b/app/src/main/res/layout/item_music_layout.xml
@@ -26,19 +26,39 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <com.mikhaellopez.circularprogressbar.CircularProgressBar
-                android:id="@+id/progress_bar"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/gray_opacity"
-                app:cpb_progress="10"
-                app:cpb_progress_max="100"
-                app:cpb_progressbar_color="@android:color/holo_green_dark"
-                app:cpb_progressbar_width="5dp"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/bg_progress_bar"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
                 app:layout_constraintBottom_toBottomOf="@id/item_music_thumnail"
-                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintLeft_toLeftOf="@id/item_music_thumnail"
                 app:layout_constraintRight_toRightOf="@id/item_music_thumnail"
-                app:layout_constraintTop_toTopOf="@id/item_music_thumnail" />
+                app:layout_constraintTop_toTopOf="@id/item_music_thumnail">
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:background="@color/gray_opacity"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+
+                <com.mikhaellopez.circularprogressbar.CircularProgressBar
+                    android:id="@+id/progress_bar"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_margin="10dp"
+                    app:cpb_progress="10"
+                    app:cpb_progress_max="100"
+                    app:cpb_progressbar_color="@android:color/holo_green_dark"
+                    app:cpb_progressbar_width="5dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
                 android:id="@+id/music_name"
