--- a/app/src/main/res/layout/fragment_favorite_music.xml
+++ b/app/src/main/res/layout/fragment_favorite_music.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragments.homeviewpager.FavoriteMusic">
+    tools:context=".fragments.home.homeviewpager.FavoriteMusic">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
