--- a/app/src/main/res/layout/fragment_thumbnail.xml
+++ b/app/src/main/res/layout/fragment_thumbnail.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingHorizontal="20dp"
-    tools:context=".fragments.nowplaylistviewpager.ThumbnailFragment">
+    tools:context=".fragments.nowplaylist.nowplaylistviewpager.ThumbnailFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <!-- TODO: Update blank fragment layout -->
