--- a/app/src/main/res/navigation/app_nav.xml
+++ b/app/src/main/res/navigation/app_nav.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="com.icongkhanh.kmuzic.fragments.HomeFragment"
+        android:name="com.icongkhanh.kmuzic.fragments.home.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/nowPlaylistFragment"
-        android:name="com.icongkhanh.kmuzic.fragments.NowPlaylistFragment"
+        android:name="com.icongkhanh.kmuzic.fragments.nowplaylist.NowPlaylistFragment"
         android:label="fragment_now_playlist"
         tools:layout="@layout/fragment_now_playlist" />
 </navigation>
