--- a/app/src/main/res/layout/fragment_now_playlist.xml
+++ b/app/src/main/res/layout/fragment_now_playlist.xml
@@ -39,6 +39,13 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/btn_back" />
 
+        <!--        <fragment-->
+        <!--            android:id="@+id/pager"-->
+        <!--            android:name="com.icongkhanh.kmuzic.fragments.nowplaylist.nowplaylistviewpager.PlaylistFragment"-->
+        <!--            android:tag="nowplaylist_fragment_container"-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="match_parent" />-->
+
         <TextView
             android:id="@+id/music_name"
             android:layout_width="wrap_content"
