--- a/app/src/main/res/layout/item_music_layout.xml
+++ b/app/src/main/res/layout/item_music_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="?android:selectableItemBackground"
     android:layout_width="match_parent"
     android:layout_height="@dimen/item_music_height"
     android:paddingBottom="10dp">
