--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:background="@color/black"
@@ -8,75 +8,101 @@
     android:layout_height="match_parent"
     tools:context=".fragments.home.HomeFragment">
 
-    <com.google.android.material.tabs.TabLayout
-        android:id="@+id/tab_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/black"
-        android:elevation="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:tabGravity="start"
-        app:tabIndicatorGravity="bottom"
-        app:tabIndicatorHeight="0dp"
-        app:tabInlineLabel="true"
-        app:tabMode="auto"
-        app:tabSelectedTextColor="@android:color/white"
-        app:tabTextAppearance="@style/TextAppearance.AppCompat.Large"
-        app:tabTextColor="@color/gray" />
-
-    <androidx.viewpager.widget.ViewPager
-        android:elevation="0dp"
-        android:background="@color/black"
-        app:layout_constraintTop_toBottomOf="@id/tab_bar"
-        android:id="@+id/viewpager"
-        app:layout_constraintBottom_toTopOf="@id/controller"
-        android:layout_width="match_parent"
-        android:layout_height="0dp" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:transitionName="shared_element_container"
-        android:background="@color/gray2"
-        android:id="@+id/controller"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/mini_player_height">
+        android:layout_height="match_parent">
 
-        <ImageView
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:id="@+id/controller_thumnail"
-            android:layout_width="@dimen/mini_player_height"
-            android:layout_height="match_parent" />
-
-        <TextView
-            android:id="@+id/music_name"
-            android:layout_width="0dp"
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_bar"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:ellipsize="marquee"
-            android:focusable="true"
-            app:layout_constraintRight_toLeftOf="@id/btn_play_or_pause"
-            android:focusableInTouchMode="true"
-            android:gravity="center"
-            android:marqueeRepeatLimit="marquee_forever"
-            android:scrollHorizontally="true"
-            android:singleLine="true"
-            android:textColor="@android:color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toRightOf="@id/controller_thumnail"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:background="@color/black"
+            android:elevation="0dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:tabGravity="start"
+            app:tabIndicatorGravity="bottom"
+            app:tabIndicatorHeight="0dp"
+            app:tabInlineLabel="true"
+            app:tabMode="auto"
+            app:tabSelectedTextColor="@android:color/white"
+            app:tabTextAppearance="@style/TextAppearance.AppCompat.Large"
+            app:tabTextColor="@color/gray" />
+
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/viewpager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@color/black"
+            android:elevation="0dp"
+            app:layout_constraintBottom_toTopOf="@id/controller"
+            app:layout_constraintTop_toBottomOf="@id/tab_bar" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/controller"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/mini_player_height"
+            android:background="@color/gray2"
+            android:transitionName="shared_element_container"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <ImageView
+                android:id="@+id/controller_thumnail"
+                android:layout_width="@dimen/mini_player_height"
+                android:layout_height="match_parent"
+                app:layout_constraintLeft_toLeftOf="parent" />
+
+            <TextView
+                android:id="@+id/music_name"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:ellipsize="marquee"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:gravity="center"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:scrollHorizontally="true"
+                android:singleLine="true"
+                android:textColor="@android:color/white"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/controller_thumnail"
+                app:layout_constraintRight_toLeftOf="@id/btn_play_or_pause"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
-        <ImageButton
-            android:layout_width="@dimen/mini_player_height"
-            android:id="@+id/btn_play_or_pause"
-            android:layout_height="match_parent"
-            android:background="?android:selectableItemBackground"
-            android:src="@drawable/ic_play_arrow"
-            android:layout_marginRight="10dp"
-            android:scaleType="centerInside"
-            android:tint="@android:color/white"
-            app:layout_constraintRight_toRightOf="parent" />
+            <ImageButton
+                android:id="@+id/btn_play_or_pause"
+                android:layout_width="@dimen/mini_player_height"
+                android:layout_height="match_parent"
+                android:layout_marginRight="10dp"
+                android:background="?android:selectableItemBackground"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_play_arrow"
+                android:tint="@android:color/white"
+                app:layout_constraintRight_toRightOf="parent" />
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/menu"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/white"
+        android:orientation="vertical"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:gravity="center"
+            android:text="Delete" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="70dp"
+            android:gravity="center"
+            android:text="Add Playlist" />
+    </LinearLayout>
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
